@@ -31,6 +31,26 @@
             <summary>
             </summary>
             <bugs>
+                <bug id="384" tool="jira">
+                    <description>
+                        Added support for 'pattern' facet for &lt;xsd:decimal&gt;.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                    	<name>Serge Henneaux</name>
+                    	<email>serge.henneaux@eurocontrol.int</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20061102</date>
+                </bug>
                 <bug id="1675" tool="jira">
                     <description>
                         Fixed problem with SchemaWriter not serializing anyAttribute 
