@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<ValAngleBrg>
+	<item>100</item>
+	<item>100.2</item>
+	<item>100.22</item>
+	<item>100.222</item>
+	<item>100.2222</item>
+</ValAngleBrg>
