@@ -1,0 +1,18 @@
+<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+
+	<xsd:simpleType name="ValAngleBrgBase">
+		<xsd:restriction base="xsd:decimal">
+			<xsd:minInclusive value="000" />
+			<xsd:maxInclusive value="360" />
+			<xsd:pattern value="\d{3}(\.\d{1,4}){0,1}" />
+		</xsd:restriction>
+	</xsd:simpleType>
+
+	<xsd:complexType name="ValAngleBrg">
+		<xsd:sequence>
+			<xsd:element name="item" type="ValAngleBrgBase"
+				minOccurs="1" maxOccurs="unbounded" />
+		</xsd:sequence>
+	</xsd:complexType>
+
+</xsd:schema>
