@@ -1,6 +1,0 @@
-<?xml version="1.0"?>
-<ValAngleBrg>
-<item>0</item>
-<item>100.</item>
-<item>100.22222</item>
-</ValAngleBrg>
